projects/lungmen.akn/src/apps/n8n/hass-external-gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
    name: hass-external
    namespace: n8n
    annotations:
        external-dns.alpha.kubernetes.io/include-unifi: "true"
        link.argocd.argoproj.io/external-link: https://hass.chezmoi.sh
spec:
    hostnames:
        - hass.chezmoi.sh
    parentRefs:
        - group: gateway.networking.k8s.io
          kind: Gateway
          name: default
          namespace: envoy-gateway-system
    rules:
        - backendRefs:
              - group: gateway.envoyproxy.io
                kind: Backend
                name: hass-external
          matches:
              - path:
                    type: PathPrefix
                    value: /
